# AnnoPage

./: .gitignore  README.md  pyproject.toml
anno_page/: globals.py
anno_page/core/: embedding.py  layout.py  llm_api_aliases.py  metadata.py  page_parser.py  services.py  utils.py
anno_page/engines/: __init__.py  base.py  captioning.py  color.py  detection.py  embedding.py  gpt.py  helpers.py  initial.py  translation.py
anno_page/enums/: __init__.py  category.py  language.py  line_relation.py
api/: README.md  api.py  authentication.py  client.py  config.py  database.py  main.py  routes.py  run.py  worker.py
api/alembic/: env.py
api/alembic/versions/: 5c90ab9cd617_init.py
api/cruds/: cruds.py
api/db/: db_create.py  model.py
api/helpers/: adapter.py  connector.py  processing_setup.py  utils.py
api/routes/: __init__.py  admin_routes.py  route_guards.py  user_routes.py  worker_routes.py
api/schemas/: base_objects.py
api/tools/mail/: mail_handler.py  mail_logger.py
api/worker/: adapter.py  connector.py  processing_setup.py  worker.py
extra_api/: README.md  api.py
extra_api/web_client/: index.html  script.js  styles.css
models/: README.md
models/captions_analyzer/: README.md
models/non-textual_element_detector/: README.md
resources/: README.md  image_captioning_prompt.json  llm_service_url_aliases.json
resources/models/captions_analyzer/: README.md
tests/: test_initial_recognition.py  test_layout.py  utils.py
tests/resources/: alto_image_no_metadata.xml  alto_image_with_basic_metadata.xml  alto_image_with_basic_metadata_and_text_lines.xml  alto_image_with_basic_metadata_and_text_lines_tagrefs.xml  alto_image_with_basic_metadata_and_text_lines_tagrefs_ai_models.xml  alto_initial_no_space.xml  alto_initial_with_space.xml  alto_remove_annopage_elements_after.xml  alto_remove_annopage_elements_before.xml  initial_recognition_prompt.json
user_scripts/: embed_images.py  parse_folder.py
