[build-system]
requires = [ "setuptools>=61" ]

[project]
name = "anno-page"
version = "0.0.1"
description = "AnnoPage"
authors = [
    {name = "Martin Ki코코", email = "ikiss@fit.vut.cz"},
    {name = "Michal Hradi코", email = "ihradis@fit.vut.cz"},
    {name = "Martin Lhot치k", email = "lhotak@lib.cas.cz"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
client = [
    "doc-api@git+https://github.com/DCGM/DocAPI@7dab856bd2b1383529d88a93797dba291e005650"
]

worker = [
    "doc-api@git+https://github.com/DCGM/DocAPI@7dab856bd2b1383529d88a93797dba291e005650"
]

api = [
    "doc-api@git+https://github.com/DCGM/DocAPI@7dab856bd2b1383529d88a93797dba291e005650"
]

tool = [
    "Jinja2",
    "lxml",
    "numpy",
    "opencv_python",
    "opencv_python_headless",
    "Pillow",
    "pydantic",
    "Requests",
    "safe_gpu",
    "sentence_transformers",
    "shapely",
    "torch",
    "transformers",
    "ultralytics",
    "pero-ocr@git+https://github.com/DCGM/pero-ocr.git@512231deabf5b933e2979d3762b4c332e4954f51",
]

full = [
    "Jinja2",
    "lxml",
    "numpy",
    "opencv_python",
    "opencv_python_headless",
    "Pillow",
    "pydantic",
    "Requests",
    "safe_gpu",
    "sentence_transformers",
    "shapely",
    "torch",
    "transformers",
    "ultralytics",
    "pero-ocr@git+https://github.com/DCGM/pero-ocr.git@512231deabf5b933e2979d3762b4c332e4954f51",
    "doc-api@git+https://github.com/DCGM/DocAPI@c7dab856bd2b1383529d88a93797dba291e005650"
]

[project.urls]
homepage = "https://orbis.lib.cas.cz/"
repository = "https://github.com/LIBCAS/AnnoPage"

[tool.setuptools.package-dir]
"anno_page" = "anno_page"
"anno_page.api" = "api"
"anno_page.user_scripts" = "user_scripts"

[project.scripts]
annopage = "anno_page.user_scripts.parse_folder:main"
annopage_api = "anno_page.api.api:main"
annopage_client = "anno_page.api.client:main"
annopage_worker = "anno_page.api.worker:main"
