[build-system]
requires = [ "setuptools>=61" ]

[project]
name = "anno-page"
version = "0.0.1"
description = "AnnoPage"
authors = [
    {name = "Martin Kišš", email = "ikiss@fit.vut.cz"},
    {name = "Michal Hradiš", email = "ihradis@fit.vut.cz"},
    {name = "Martin Lhoták", email = "lhotak@lib.cas.cz"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

client = [
    "doc-api@git+https://github.com/DCGM/DocAPI@f1e19e4bf9699736ed999bad6b7abf9205d25d42"
]

worker = [
    "doc-api@git+https://github.com/DCGM/DocAPI@f1e19e4bf9699736ed999bad6b7abf9205d25d42"
]

api = [
    "doc-api@git+https://github.com/DCGM/DocAPI@f1e19e4bf9699736ed999bad6b7abf9205d25d42"
]

tool = [
    "Jinja2",
    "lxml",
    "numpy",
    "opencv_python",
    "opencv_python_headless",
    "Pillow",
    "pydantic",
    "Requests",
    "safe_gpu",
    "sentencepiece",
    "shapely",
    "torch",
    "transformers",
    "ultralytics",
    "pero-ocr@git+https://github.com/DCGM/pero-ocr.git@850a540c6a0cd2f24b7f7be85cf2d59fc0583ea8",
]

full = [
    "Jinja2",
    "lxml",
    "numpy",
    "opencv_python",
    "opencv_python_headless",
    "Pillow",
    "pydantic",
    "Requests",
    "safe_gpu",
    "sentencepiece",
    "shapely",
    "torch",
    "transformers",
    "ultralytics",
    "pero-ocr@git+https://github.com/DCGM/pero-ocr.git@850a540c6a0cd2f24b7f7be85cf2d59fc0583ea8",
    "doc-api@git+https://github.com/DCGM/DocAPI@f1e19e4bf9699736ed999bad6b7abf9205d25d42"
]

[project.urls]
homepage = "https://orbis.lib.cas.cz/"
repository = "https://github.com/LIBCAS/AnnoPage"

[tool.setuptools.package-dir]
"anno_page" = "anno_page"
"anno_page.api" = "api"
"anno_page.user_scripts" = "user_scripts"
"anno_page.extra_api" = "extra_api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
annopage = "anno_page.user_scripts.parse_folder:main"
annopage_api = "anno_page.api.api:main"
annopage_client = "anno_page.api.client:main"
annopage_worker = "anno_page.api.worker:main"
annopage_extra_api = "anno_page.extra_api.api:main"
